--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
+  flutter_screenutil: ^5.9.0
+  dots_indicator:
+  intl:
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +29,10 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
